[gd_scene load_steps=3 format=3 uid="uid://nayi74h52ddu"]

[ext_resource type="Script" path="res://scripts/sliders.gd" id="1_ct4nj"]
[ext_resource type="Texture2D" uid="uid://0qb1jp1e3xw8" path="res://art/Screenshot 2024-11-16 at 5.53.46â€¯PM.png" id="2_j7mvn"]

[node name="ControlPanels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sliders" type="Node2D" parent="."]
script = ExtResource("1_ct4nj")

[node name="Sprite2D" type="Sprite2D" parent="Sliders"]
position = Vector2(574.639, 557.5)
scale = Vector2(1.29677, 0.70082)
texture = ExtResource("2_j7mvn")

[node name="Label" type="Label" parent="Sliders"]
offset_left = -2.0
offset_top = 607.0
offset_right = 72.0
offset_bottom = 630.0
text = "Methane "

[node name="Label2" type="Label" parent="Sliders"]
offset_left = 38.0
offset_top = 490.0
offset_right = 149.0
offset_bottom = 513.0
text = "Liquid Oxygen"

[node name="Label3" type="Label" parent="Sliders"]
offset_left = 129.0
offset_top = 607.0
offset_right = 240.0
offset_bottom = 630.0
text = "Mass"

[node name="Label4" type="Label" parent="Sliders"]
offset_left = 248.0
offset_top = 489.0
offset_right = 359.0
offset_bottom = 512.0
text = "Wind"

[node name="Label5" type="Label" parent="Sliders"]
offset_left = 222.0
offset_top = 512.0
offset_right = 333.0
offset_bottom = 535.0
text = "<- launchpad"

[node name="Label6" type="Label" parent="Sliders"]
offset_left = 221.0
offset_top = 539.0
offset_right = 334.0
offset_bottom = 588.0
text = "upper 
atmosphere ->"

[node name="Label7" type="Label" parent="Sliders"]
offset_left = 363.0
offset_top = 605.0
offset_right = 476.0
offset_bottom = 654.0
text = "Temp (*F)"

[node name="Fuel" type="VSlider" parent="Sliders"]
offset_left = 31.0
offset_top = 518.0
offset_right = 47.0
offset_bottom = 607.0
min_value = 900.0
max_value = 1100.0
step = 20.0
value = 900.0

[node name="VSlider2" type="VSlider" parent="Sliders"]
offset_left = 83.0
offset_top = 518.0
offset_right = 99.0
offset_bottom = 607.0
min_value = 3500.0
max_value = 4500.0
step = 100.0
value = 3500.0

[node name="Mass" type="VSlider" parent="Sliders"]
offset_left = 139.0
offset_top = 518.0
offset_right = 155.0
offset_bottom = 607.0
max_value = 25.0
step = 5.0
value = 5.0

[node name="VSlider4" type="VSlider" parent="Sliders"]
offset_left = 200.0
offset_top = 518.0
offset_right = 216.0
offset_bottom = 607.0
max_value = 50.0
step = 5.0

[node name="VSlider5" type="VSlider" parent="Sliders"]
offset_left = 336.0
offset_top = 518.0
offset_right = 352.0
offset_bottom = 607.0
max_value = 300.0
step = 30.0

[node name="VSlider6" type="VSlider" parent="Sliders"]
offset_left = 388.0
offset_top = 518.0
offset_right = 404.0
offset_bottom = 607.0
step = 10.0
